2004-04-20  Theodore A. Roth  <troth@openavr.org>
[Contributed by LAL@pro.onet.pl]

	[This closes patch #2651]
	* include/avr/iom169.h: Change SIG_UART0_RECV to SIG_USART_RECV.
	Change SIG_UART0_DATA to SIG_USART_DATA.
	Change SIG_UART0_TRANS to SIG_USART_TRANS.

2004-04-20  Theodore A. Roth  <troth@openavr.org>

	[This change should fix bug #8391]
	* include/avr/boot.h (__BOOT_LOCK_BITS_MASK): Remove.
	(__boot_lock_bits_set): Use the compliment of lock_bits arg so the user
	specifies only which bits are to be set. NOTE that this changes the
	usage but the previous usage was confusing and not well documented.
	(__boot_lock_bits_set_alternate): Ditto.
	(boot_lock_bits_set): Improve documentation.

2004-04-16  Theodore A. Roth  <troth@openavr.org>
[Contributed by Wolfgang Haidinger <wh@vmars.tuwien.ac.at>]

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* NEWS: Add note about new pgmspaces macros.
	* include/avr/pgmspace.h: Extend API to allow access of 32 bit
	unsigned double words.

2004-04-14  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/iotn13.h: New file.

2004-04-13  Theodore A. Roth  <troth@openavr.org>

	* include/avr/iotn2313.h: Don't define the EERIE, EEMPE, EEPE and EERE
	bits since they're defined in <avr/io.h>.

2004-04-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
[Contributed by <adebeun@enatel.net>]

	* include/avr/wdt.h: Fix _wdt_write() for the ATmega169,
	closes bug #8119.

2004-04-13  Theodore A. Roth  <troth@openavr.org>
[Contributed by Bob Paddock <bpaddock@csonline.net>]

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/iotn2313.h: New file.

2004-04-06  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox: Cosmetics: update (C) year, remove some
	vestiges of trailing whitespace.

2004-04-06  Theodore A. Roth  <troth@openavr.org>

	* include/avr/iom169.h: Update copyright year.
	Fixes for bug #8452.
	(OCR1A): Fix register name.
	(OCR1B): Ditto.
	(UCSRA): Ditto.